ajustes_service_main_atractions_and_include_excludes:
1. Se agregaron los servicios para el admin en el tour /admin/findAll, /admin/consultDataTourById/{tourId}, /admin/acceptTourById/{tourId}, /admin/cancelTourById/{tourId}.

2. Se agregaron los servicio para el user en el tour /user/findAllByUser, /user/consultDataTourById/{tourId}