@@ -4,10 +4,8 @@ package com.tourya.api.services;
 import com.tourya.api._utils.Utils;
 import com.tourya.api.common.PageResponse;
 import com.tourya.api.constans.enums.IncludeExcludeTypeEnum;
-import com.tourya.api.constans.enums.ProviderStatusEnum;
 import com.tourya.api.constans.enums.TourStatusEnum;
 import com.tourya.api.exceptions.InsufficientPrivilegesException;
-import com.tourya.api.exceptions.OperationNotPermittedException;
 import com.tourya.api.exceptions.ResourceNotFoundException;
 import com.tourya.api.models.City;
 import com.tourya.api.models.Country;
@@ -51,6 +49,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -102,6 +101,31 @@ public class TourService {
             Pageable pageable = PageRequest.of(page, size, Sort.by("createdDate").descending());
             Provider provider = providerService.findByUserAndStatusActive(user);
             Page<Tour> allTours = tourRepository.findAllByProviderId(provider.getId(), pageable);
+
+            List<TourResponse> toursResponse = allTours.stream()
+                    .map(tourMapper::toTourResponse)
+                    .toList();
+
+            return new PageResponse<>(
+                    toursResponse,
+                    allTours.getNumber(),
+                    allTours.getSize(),
+                    allTours.getTotalElements(),
+                    allTours.getTotalPages(),
+                    allTours.isFirst(),
+                    allTours.isLast()
+            );
+
+        }else{
+            throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
+        }
+    }
+    public PageResponse<TourResponse> findAll(int page, int size, TourStatusEnum status, Authentication connectedUser){
+        User user = ((User) connectedUser.getPrincipal());
+        List<Role> roleList = user.getRoles();
+        if(Utils.isAdmin(roleList)){
+            Pageable pageable = PageRequest.of(page, size, Sort.by("createdDate").descending());
+            Page<Tour> allTours = tourRepository.findAllTour(status, pageable);
 
             List<TourResponse> toursResponse = allTours.stream()
                     .map(tourMapper::toTourResponse)
@@ -223,21 +247,8 @@ public class TourService {
             List<TourIncludesExcludesRequest> tourExcludesRequest = tourFullDataRequest.getExcludes();
             List<TourIncludesExcludesResponse>  tourExcludesResponseList  =  includesExcludesReplaceAllForTour(tourExcludesRequest, tourNew, IncludeExcludeTypeEnum.EXCLUDE);
 
-            TourFullDataResponse tourFullDataResponse = new TourFullDataResponse();
-            tourFullDataResponse.setId(tourNew.getId());
-            tourFullDataResponse.setName(tourNew.getName());
-            tourFullDataResponse.setDescription(tourNew.getDescription());
-            tourFullDataResponse.setDescription(tourNew.getDescription());
-            tourFullDataResponse.setTourCategoryId(tourNew.getTourCategory().getId());
-            tourFullDataResponse.setDuration(tourNew.getDuration());
-            tourFullDataResponse.setMaxPeople(tourNew.getMaxPeople());
-            tourFullDataResponse.setHighlight(tourNew.getHighlight());
-            tourFullDataResponse.setStatus(tourNew.getStatus());
-            tourFullDataResponse.setLocations(tourAddressResponseList);
-            tourFullDataResponse.setMainAttractions(tourMainAttractionResponseList);
-            tourFullDataResponse.setIncludes(tourIncludesResponseList);
-            tourFullDataResponse.setExcludes(tourExcludesResponseList);
-            return  tourFullDataResponse;
+            return tourMapper.toTourFullDataResponse(tourNew, tourAddressResponseList,
+                    tourMainAttractionResponseList, tourIncludesResponseList, tourExcludesResponseList);
         }else{
             throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
         }
@@ -253,11 +264,11 @@ public class TourService {
                     entity.setTour(tour);
                     return entity;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return tourMainAttractionRepository.saveAll(newAttractions).stream()
                 .map(tourMainAttractionMapper::toTourMainAttractionResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
     private List<TourIncludesExcludesResponse> includesExcludesReplaceAllForTour(List<TourIncludesExcludesRequest> requests,
                                                                 Tour tour,
@@ -273,11 +284,105 @@ public class TourService {
                     entity.setTour(tour);
                     return entity;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         tourIncludesExcludesRepository.saveAll(newList);
         return tourIncludesExcludesRepository.findByTourIdAndType(tour.getId(), type).stream()
                 .map(tourIncludesExcludesMapper::tourIncludesExcludesResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+    public TourFullDataResponse consultDataTourById(Integer tourId, Authentication connectedUser){
+        User user = ((User) connectedUser.getPrincipal());
+        List<Role> roleList = user.getRoles();
+        if(Utils.isProvider(roleList)){
+            Provider provider = providerService.findByUserAndStatusActive(user);
+            Tour tour = tourRepository.findTourByIdAndProviderId(tourId, provider.getId());
+            if(tour != null){
+                return tourMapper.toTourFullDataResponse(tour, consultDataTourAddressListByTourId(tourId),
+                        getAllByTourMainAttractions(tourId), getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.INCLUDE),
+                        getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.EXCLUDE));
+            }else{
+                throw new ResourceNotFoundException("Tour not found with id = "+tourId+" to providerId = "+provider.getId());
+            }
+        }else{
+            throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
+        }
+    }
+    public TourFullDataResponse consultDataTourByIdToAdmin(Integer tourId, Authentication connectedUser){
+        User user = ((User) connectedUser.getPrincipal());
+        List<Role> roleList = user.getRoles();
+        if(Utils.isAdmin(roleList)){
+            Optional<Tour> optionalTour = tourRepository.findById(tourId);
+            if(optionalTour.isPresent()){
+                Tour tour = optionalTour.get();
+                return tourMapper.toTourFullDataResponse(tour, consultDataTourAddressListByTourId(tourId),
+                        getAllByTourMainAttractions(tourId), getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.INCLUDE),
+                        getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.EXCLUDE));
+            }else{
+                throw new ResourceNotFoundException("Tour not found with id = "+tourId);
+            }
+        }else{
+            throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
+        }
+    }
+    public TourFullDataResponse acceptTourByIdToAdmin(Integer tourId, Authentication connectedUser){
+        User user = ((User) connectedUser.getPrincipal());
+        List<Role> roleList = user.getRoles();
+        if(Utils.isAdmin(roleList)){
+            Optional<Tour> optionalTour = tourRepository.findById(tourId);
+            if(optionalTour.isPresent()){
+                Tour tour = optionalTour.get();
+                tour.setStatus(TourStatusEnum.ACCEPTED);
+                Tour tourUpdate = tourRepository.save(tour);
+                return tourMapper.toTourFullDataResponse(tourUpdate, consultDataTourAddressListByTourId(tourId),
+                        getAllByTourMainAttractions(tourId), getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.INCLUDE),
+                        getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.EXCLUDE));
+            }else{
+                throw new ResourceNotFoundException("Tour not found with id = "+tourId);
+            }
+        }else{
+            throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
+        }
+    }
+    public TourFullDataResponse cancelTourByIdToAdmin(Integer tourId, Authentication connectedUser){
+        User user = ((User) connectedUser.getPrincipal());
+        List<Role> roleList = user.getRoles();
+        if(Utils.isAdmin(roleList)){
+            Optional<Tour> optionalTour = tourRepository.findById(tourId);
+            if(optionalTour.isPresent()){
+                Tour tour = optionalTour.get();
+                tour.setStatus(TourStatusEnum.CANCELLED);
+                Tour tourUpdate = tourRepository.save(tour);
+                return tourMapper.toTourFullDataResponse(tourUpdate, consultDataTourAddressListByTourId(tourId),
+                        getAllByTourMainAttractions(tourId), getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.INCLUDE),
+                        getAllByTourIncludesExcludes(tourId, IncludeExcludeTypeEnum.EXCLUDE));
+            }else{
+                throw new ResourceNotFoundException("Tour not found with id = "+tourId);
+            }
+        }else{
+            throw new InsufficientPrivilegesException(NOT_PRIVILEGES);
+        }
+    }
+    public List<TourAddressResponse> consultDataTourAddressListByTourId(Integer tourId){
+        return tourAddressRepository.findByTourId(tourId).stream()
+                .map(tourAddressMapper::toTourAddressResponse)
+                .toList();
+    }
+    private List<TourMainAttractionResponse> getAllByTourMainAttractions(Integer tourId) {
+        return tourMainAttractionRepository.findByTourId(tourId)
+                .stream()
+                .map(tourMainAttractionMapper::toTourMainAttractionResponse)
+                .toList();
+    }
+    private List<TourIncludesExcludesResponse> getAllByTourIncludesExcludes(Integer tourId, IncludeExcludeTypeEnum type) {
+        if(type != null){
+            return tourIncludesExcludesRepository.findByTourIdAndType(tourId, type).stream()
+                    .map(tourIncludesExcludesMapper::tourIncludesExcludesResponse)
+                    .toList();
+        }else{
+            return tourIncludesExcludesRepository.findByTourId(tourId).stream()
+                    .map(tourIncludesExcludesMapper::tourIncludesExcludesResponse)
+                    .toList();
+        }
     }
 }
